# trilby

./: .gitignore  README.md  bump.sh  flake.nix  quickstart.sh
.github/workflows/: ci.yml
lib/: attrsets.nix  compat.nix  dconf.nix  default.nix  lists.nix  modules.nix  strings.nix  trilby.nix  trivial.nix
modules/: btrfs.nix  fonts.nix  network.nix  nix.nix  users.nix  virtualisation.nix  wayland.nix  zsh.nix
modules/editions/: base.nix  server.nix  workstation.nix
modules/editions/workstation/: default.nix
modules/formats/: digitalOceanImage.nix  hypervImage.nix  isoImage.nix  kexec.nix  kexecScript.nix  qcow.nix  sdImage.nix  toplevel.nix  virtualBoxOVA.nix  vmwareImage.nix
modules/formats/isoImage/: default.nix  motd.txt  user.nix
modules/home/: cursor.nix  darwin.nix  dconf.nix  default.nix  direnv.nix  firefox.nix  foot.nix  git.nix  mako.nix  nix-colors.nix  starship.nix  tmux.nix  xdg.nix
modules/home/neovim/: default.nix  init.lua
modules/home/neovim/configuration/: base16.nix  basic.nix  haskell.nix  nix.nix  treesitter.nix
modules/home/neovim/plugins/: autopairs.nix  autoreload.lua  autoreload.nix  base16.nix  catppuccin.nix  config.lua  gitsigns.nix  haskell.nix  hlslens.nix  illuminate.nix  lsp-lines.nix  lsp.nix  lz-n.nix  nix.nix  null-ls.lua  null-ls.nix  scrollbar.nix  scrollview.nix  treesitter.nix
modules/home/neovim/plugins/treesitter/: config.lua  default.nix
modules/home/xdg/: default.nix
modules/home/zsh/: default.nix  init.sh
modules/hostPlatforms/: aarch64-darwin.nix  darwin.nix  riscv64-linux.nix  x86_64-linux.nix
modules/overlays/: _unstable.nix  disko.nix  firefox.nix  lib.nix  nerdify.nix  nix-darwin.nix  nix-monitored.nix  parsedSystem.nix  termify.nix  trilby-cli.nix  unstable.nix
modules/overlays/nix-direnv/: default.nix  nvd.patch
modules/overlays/pkgs/: console-fonts-utils.nix  console-fonts-zap.nix  console-setup.nix  default.nix  nvim.nix  parsedSystem.nix  trilby-motd.nix
modules/overlays/trilby-grub2-theme/: default.nix
modules/profiles/: base.nix  boot.nix  bootloader.nix  btrfs.nix  console.nix  darwin.nix  documentation.nix  dvorak.nix  fhs.nix  firefox.nix  fonts.nix  getty.nix  gnome.nix  installer.nix  kernel.nix  libreoffice.nix  linux.nix  mimetypes.nix  network.nix  nix-monitored.nix  nix.nix  nixpkgs.nix  pipewire.nix  plymouth.nix  polkit.nix  ssh.nix  sway.nix  users.nix  virtualisation.nix  xfs.nix  zsh.nix
modules/profiles/gnome/: default.nix  eog.nix  evince.nix  evolution.nix  file-roller.nix  geary.nix  papers.nix  rhythmbox.nix  showtime.nix  totem.nix
modules/profiles/installer/: default.nix  motd.txt
modules/trilby/: base.nix  medium.nix  server.nix  users.nix  workstation.nix
modules/trilby/editions/: base.nix  server.nix  workstation.nix
modules/trilby/formats/: hyperv.nix  iso.nix  isoImage.nix  qcow.nix  sdImage.nix  virtualbox.nix  vmware.nix
modules/trilby/formats/isoImage/: default.nix  motd.txt
modules/trilby/hostPlatforms/: riscv64-linux.nix
outputs/: allConfigs.nix  configuration.nix  default.nix
outputs/configuration/: default.nix  system.nix
outputs/configuration/isoImage/: compression.nix  default.nix  qemu.nix
outputs/configuration/isoImage/test/: default.nix
outputs/configuration/isoImage/test/flake-install/: flake.nix  script.py
outputs/configuration/isoImage/test/manual-install/: script.py
outputs/releases/: flake.nix
overlays/trilby-grub2-theme/: default.nix
trilby-cli/: CHANGELOG.md  LICENCE.md  default.nix  flake.nix  haskell.nix  overlay.nix  shell.nix  trilby-cli.cabal
trilby-cli/app/: Log.hs  Main.hs
trilby-cli/app/Trilby/: App.hs  Command.hs  Config.hs  Disko.hs  HNix.hs  Install.hs  Logger.hs  Options.hs  Update.hs  Util.hs
trilby-cli/app/Trilby/Config/: Channel.hs  Edition.hs  Host.hs  User.hs
trilby-cli/app/Trilby/Disko/: Disk.hs  Filesystem.hs  Partition.hs
trilby-cli/app/Trilby/Install/: Disko.hs  Flake.hs  Options.hs
trilby-cli/app/Trilby/Update/: Options.hs
trilby-cli/assets/install/: disk-configuration.nix  flake.nix  host.nix  user.nix
trilby-cli/src/: Main.hs  Prelude.hs
trilby-cli/src/Effectful/: Path.hs
trilby-cli/src/Internal/: Prelude.hs  Widgets.hs
trilby-cli/src/Trilby/: App.hs  BootloaderEntry.hs  Clean.hs  Command.hs  Config.hs  Configuration.hs  Disko.hs  FlakeRef.hs  HNix.hs  Host.hs  Infect.hs  Install.hs  Log.hs  Media.hs  Options.hs  Prelude.hs  Process.hs  Setup.hs  System.hs  Update.hs  Version.hs  Widgets.hs
trilby-cli/src/Trilby/Clean/: Options.hs
trilby-cli/src/Trilby/Config/: Channel.hs  Edition.hs  Host.hs  Release.hs  User.hs
trilby-cli/src/Trilby/Disko/: Disk.hs  Filesystem.hs  Partition.hs
trilby-cli/src/Trilby/Infect/: Options.hs
trilby-cli/src/Trilby/Install/: Disko.hs  Flake.hs  Options.hs
trilby-cli/src/Trilby/Install/Config/: Edition.hs  Host.hs  Keyboard.hs  Release.hs  User.hs
trilby-cli/src/Trilby/Media/: Format.hs  Options.hs
trilby-cli/src/Trilby/Update/: Options.hs
