cabal-version:   3.4
name:            trilby-cli
version:         0.1.0.0
synopsis:        Trilby command line tools
homepage:        https://github.com/ners/trilby
license:         Apache-2.0
license-file:    LICENCE.md
author:          ners
maintainer:      ners@gmx.ch
category:        System
build-type:      Simple
extra-doc-files: CHANGELOG.md, README.md

common common
    default-language:   GHC2021
    ghc-options:
        -Weverything -Wno-unsafe -Wno-missing-safe-haskell-mode
        -Wno-missing-export-lists -Wno-missing-import-lists
        -Wno-missing-kind-signatures -Wno-all-missed-specialisations
    default-extensions:
        ApplicativeDo
        BlockArguments
        DataKinds
        DefaultSignatures
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        ExplicitNamespaces
        LambdaCase
        NoFieldSelectors
        NoImplicitPrelude
        OverloadedLabels
        OverloadedLists
        OverloadedRecordDot
        OverloadedStrings
        QuasiQuotes
        PackageImports
        RecordWildCards
        RecursiveDo
        StrictData
        TemplateHaskell
        TypeFamilies
        ViewPatterns

library
    import:          common
    hs-source-dirs:  src
    other-modules:
        Prelude
        Trilby.HNix
        Trilby.Widgets
    exposed-modules:
        Trilby.App
        Trilby.Command
        Trilby.Config
        Trilby.Config.Channel
        Trilby.Config.Edition
        Trilby.Config.Host
        Trilby.Config.User
        Trilby.Disko
        Trilby.Disko.Disk
        Trilby.Disko.Filesystem
        Trilby.Disko.Partition
        Trilby.Install
        Trilby.Install.Disko
        Trilby.Install.Flake
        Trilby.Install.Options
        Trilby.Options
        Trilby.Update
        Trilby.Update.Options
    build-depends:
        , base
        , data-default
        , data-fix
        , extra
        , generic-lens
        , hnix
        , lens
        , lens-family-th
        , monad-logger
        , mtl
        , optparse-applicative
        , terminal
        , terminal-widgets
        , text
        , text-rope-zipper
        , turtle
        , unix
        , unliftio

executable trilby
    import:         common
    main-is:        Main.hs
    hs-source-dirs: app
    other-modules:
        Log,
    build-depends:
        , ansi-terminal
        , base
        , monad-logger
        , optparse-applicative
        , text
        , trilby-cli
