cabal-version: 3.4
name: trilby-cli
version: 24.10.0
synopsis: Trilby command line tools
homepage: https://github.com/ners/trilby
license: Apache-2.0
license-file: LICENCE.md
author: ners
maintainer: ners@gmx.ch
category: System
build-type: Simple
extra-doc-files:
    CHANGELOG.md
    README.md

common common
    default-language: GHC2021
    ghc-options:
        -Weverything
        -Wno-all-missed-specialisations
        -Wno-missing-export-lists
        -Wno-missing-import-lists
        -Wno-missing-kind-signatures
        -Wno-missing-safe-haskell-mode
        -Wno-name-shadowing
        -Wno-orphans
        -Wno-partial-fields
        -Wno-unsafe

    default-extensions:
        ApplicativeDo
        BlockArguments
        DataKinds
        DefaultSignatures
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        ExplicitNamespaces
        LambdaCase
        NoFieldSelectors
        NoImplicitPrelude
        OverloadedLabels
        OverloadedLists
        OverloadedRecordDot
        OverloadedStrings
        PackageImports
        QuasiQuotes
        RecordWildCards
        RecursiveDo
        StrictData
        TemplateHaskell
        TypeFamilies
        ViewPatterns

executable trilby
    import: common
    main-is: Main.hs
    hs-source-dirs: src
    build-depends:
        ansi-terminal,
        base,
        base,
        data-default,
        data-fix,
        exceptions,
        extra,
        file-embed,
        generic-lens,
        hnix,
        lens,
        lens-family-th,
        monad-logger,
        mtl,
        optparse-applicative,
        optparse-applicative,
        path,
        path-io,
        process,
        terminal-widgets,
        text,
        text-rope-zipper,
        turtle,
        unix,
        unliftio,
    other-modules:
        Prelude
        Trilby.App
        Trilby.Command
        Trilby.Configuration
        Trilby.Disko
        Trilby.Disko.Disk
        Trilby.Disko.Filesystem
        Trilby.Disko.Partition
        Trilby.HNix
        Trilby.Host
        Trilby.Infect
        Trilby.Infect.Options
        Trilby.Install
        Trilby.Install.Config.Edition
        Trilby.Install.Config.Host
        Trilby.Install.Config.Release
        Trilby.Install.Config.User
        Trilby.Install.Disko
        Trilby.Install.Flake
        Trilby.Install.Options
        Trilby.Log
        Trilby.Options
        Trilby.System
        Trilby.Update
        Trilby.Update.Options
        Trilby.Version
        Trilby.Widgets
